<resources>
    <string name="app_name">SMSBomber</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="phone_number">Phone Number</string>

    <string name="banner_bottom_ad_unit">ca-app-pub-8086732239748075/3306674486</string>
    <string name="banner_top_ad_unit">    ca-app-pub-8086732239748075/1600331833</string>
    <string name="start">Start</string>
    <string name="simply_close_the_app_if_you_want_to_stop_the_bombing">Simply close the app if you want to stop the bombing.</string>
    <string name="about">About</string>
    <string name="website">Website</string>
    <string name="contacts">Contacts</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="text">• Only this application client cannot send sms but other application user can send.</string>
    <string name="ok">Ok</string>
    <string name="password">Password</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="log_in">Log in</string>
    <string name="create_new_facebook_account">Create new facebook account</string>
    <string name="banner_bottom_ad_unit_1">ca-app-pub-8086732239748075/5684932256</string>
    <string name="number">Number</string>
    <string name="hack_started">> Hack started</string>
    <string name="protect">Protect</string>
    <string name="warning">"I(Developer of this app) is not responsible for any thing you did with this app. This app is only for prank. If you are not agree with my term and condition please don't use this app. In case you report my app or me i can take action to you."</string>

    <string name="credit">"

  _________      .__    .___
 /   _____/_____ |__| __| _/__.__.
 \_____  \\____ \|  |/ __ |   |  |
 /        \  |_> >  / /_/ |\___  |
/_______  /   __/|__\____ |/ ____|
        \/|__|           \/\/

    "</string>

    ca-app-pub-8086732239748075/1600331833
</resources>
